Added SERVER_OPTIONS config setting